{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 132,
  "lineage": "3f05a2e5-27fe-ee89-16e1-1d49b7460e38",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002e804b884a4e771",
            "arn": "arn:aws:ec2:ap-south-1:369759350131:elastic-ip/eipalloc-002e804b884a4e771",
            "association_id": "eipassoc-0f1c60be4a1091709",
            "domain": "vpc",
            "id": "eipalloc-002e804b884a4e771",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-081e6a7fa5b52b9ce",
            "private_dns": "ip-10-0-0-38.ap-south-1.compute.internal",
            "private_ip": "10.0.0.38",
            "public_dns": "ec2-65-1-41-18.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.41.18",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "NAT-EIP"
            },
            "tags_all": {
              "Name": "NAT-EIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:369759350131:internet-gateway/igw-02be2601b8303fbf2",
            "id": "igw-02be2601b8303fbf2",
            "owner_id": "369759350131",
            "region": "ap-south-1",
            "tags": {
              "Name": "assignment-igw"
            },
            "tags_all": {
              "Name": "assignment-igw"
            },
            "vpc_id": "vpc-0642e5f1ff8cdf270"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "assignment_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:369759350131:loadbalancer/app/assignment-alb/4bb36bc461213d3e",
            "arn_suffix": "app/assignment-alb/4bb36bc461213d3e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "assignment-alb-1046179035.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:369759350131:loadbalancer/app/assignment-alb/4bb36bc461213d3e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "assignment-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-002307dd8edafe884"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-069669dc9221b8003"
              },
              {
                "subnet_id": "subnet-0f2c408b3fbee7db1"
              }
            ],
            "subnets": [
              "subnet-069669dc9221b8003",
              "subnet-0f2c408b3fbee7db1"
            ],
            "tags": {
              "Name": "alb-lb"
            },
            "tags_all": {
              "Name": "alb-lb"
            },
            "vpc_id": "vpc-0642e5f1ff8cdf270",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:369759350131:loadbalancer/app/assignment-alb/4bb36bc461213d3e"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_vpc.assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "assignment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:369759350131:listener/app/assignment-alb/4bb36bc461213d3e/afe4da528a347d0f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:369759350131:targetgroup/assignment-tg/c8330f53ba7930ee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:369759350131:listener/app/assignment-alb/4bb36bc461213d3e/afe4da528a347d0f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:369759350131:loadbalancer/app/assignment-alb/4bb36bc461213d3e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:369759350131:listener/app/assignment-alb/4bb36bc461213d3e/afe4da528a347d0f"
          },
          "dependencies": [
            "aws_lb.assignment_alb",
            "aws_lb_target_group.assignment_tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_vpc.assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "assignment_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:369759350131:targetgroup/assignment-tg/c8330f53ba7930ee",
            "arn_suffix": "targetgroup/assignment-tg/c8330f53ba7930ee",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:369759350131:targetgroup/assignment-tg/c8330f53ba7930ee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:369759350131:loadbalancer/app/assignment-alb/4bb36bc461213d3e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "assignment-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "assignment-tg"
            },
            "tags_all": {
              "Name": "assignment-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0642e5f1ff8cdf270"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:369759350131:targetgroup/assignment-tg/c8330f53ba7930ee"
          },
          "dependencies": [
            "aws_vpc.assignment-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002e804b884a4e771",
            "association_id": "eipassoc-0f1c60be4a1091709",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0ee71831913dc72a7",
            "network_interface_id": "eni-081e6a7fa5b52b9ce",
            "private_ip": "10.0.0.38",
            "public_ip": "65.1.41.18",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f2c408b3fbee7db1",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            },
            "vpc_id": "vpc-0642e5f1ff8cdf270"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public-1",
            "aws_vpc.assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:369759350131:route-table/rtb-01e62ff03d94c3783",
            "id": "rtb-01e62ff03d94c3783",
            "owner_id": "369759350131",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ee71831913dc72a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0642e5f1ff8cdf270"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "369759350131",
            "id": "rtb-01e62ff03d94c3783",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.NAT",
            "aws_subnet.public-1",
            "aws_vpc.assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:369759350131:route-table/rtb-0968bb174c8dcb5d5",
            "id": "rtb-0968bb174c8dcb5d5",
            "owner_id": "369759350131",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02be2601b8303fbf2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0642e5f1ff8cdf270"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "369759350131",
            "id": "rtb-0968bb174c8dcb5d5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d0eee72da039511",
            "region": "ap-south-1",
            "route_table_id": "rtb-01e62ff03d94c3783",
            "subnet_id": "subnet-0b301902c062df6c6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.NAT",
            "aws_route_table.private-rt",
            "aws_subnet.private-1",
            "aws_subnet.public-1",
            "aws_vpc.assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fffc7b0abb191825",
            "region": "ap-south-1",
            "route_table_id": "rtb-01e62ff03d94c3783",
            "subnet_id": "subnet-040ec326b59e4e4ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.NAT",
            "aws_route_table.private-rt",
            "aws_subnet.private-2",
            "aws_subnet.public-1",
            "aws_vpc.assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e7ef1a05bdf2fe7",
            "region": "ap-south-1",
            "route_table_id": "rtb-0968bb174c8dcb5d5",
            "subnet_id": "subnet-0f2c408b3fbee7db1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-1",
            "aws_vpc.assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059c4dc9a6d5fc6a0",
            "region": "ap-south-1",
            "route_table_id": "rtb-0968bb174c8dcb5d5",
            "subnet_id": "subnet-069669dc9221b8003"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-2",
            "aws_vpc.assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:369759350131:security-group/sg-002307dd8edafe884",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002307dd8edafe884",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251206051820815400000001",
            "name_prefix": "terraform-",
            "owner_id": "369759350131",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0642e5f1ff8cdf270"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "369759350131",
            "id": "sg-002307dd8edafe884",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.assignment-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:369759350131:security-group/sg-0fe4303ee5186e18f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe4303ee5186e18f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002307dd8edafe884"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20251206051823756300000004",
            "name_prefix": "terraform-",
            "owner_id": "369759350131",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-SG"
            },
            "tags_all": {
              "Name": "EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0642e5f1ff8cdf270"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "369759350131",
            "id": "sg-0fe4303ee5186e18f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.assignment-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:369759350131:subnet/subnet-0b301902c062df6c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b301902c062df6c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "369759350131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0642e5f1ff8cdf270"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "369759350131",
            "id": "subnet-0b301902c062df6c6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.assignment-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:369759350131:subnet/subnet-040ec326b59e4e4ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040ec326b59e4e4ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "369759350131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0642e5f1ff8cdf270"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "369759350131",
            "id": "subnet-040ec326b59e4e4ec",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.assignment-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:369759350131:subnet/subnet-0f2c408b3fbee7db1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2c408b3fbee7db1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "369759350131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0642e5f1ff8cdf270"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "369759350131",
            "id": "subnet-0f2c408b3fbee7db1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:369759350131:subnet/subnet-069669dc9221b8003",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069669dc9221b8003",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "369759350131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0642e5f1ff8cdf270"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "369759350131",
            "id": "subnet-069669dc9221b8003",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "assignment-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:369759350131:vpc/vpc-0642e5f1ff8cdf270",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01df063150219b079",
            "default_route_table_id": "rtb-0ff03393829fc0629",
            "default_security_group_id": "sg-062c8261f5d471094",
            "dhcp_options_id": "dopt-0ffa0f9af96138b1b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0642e5f1ff8cdf270",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ff03393829fc0629",
            "owner_id": "369759350131",
            "region": "ap-south-1",
            "tags": {
              "Name": "assignment-vpc"
            },
            "tags_all": {
              "Name": "assignment-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "369759350131",
            "id": "vpc-0642e5f1ff8cdf270",
            "region": "ap-south-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}